--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,121 +21,7 @@
 </head>
 
 <body>
-  <div class="site-wrap">
-    <header class="site-header px2 px-responsive">
-      <div class="mt2 wrap">
-        <div class="measure">
-          <a href="{{ site.url }}" class="left">{{ site.title }}</a>
-          <nav class="site-nav right">
-            {% include navigation.html %}
-          </nav>
-          <div class="clearfix"></div>
-        </div>
-      </div>
-    </header>
-
-
-    <style media="screen">
-    #sponsors h1 {
-      text-align: center;
-      font-size: 1em;
-    }
-
-    #sponsors * {
-      box-sizing: border-box;
-    }
-
-
-    .sponsors {
-      display: -webkit-box;
-      display: -webkit-flex;
-      display: -ms-flexbox;
-      display: flex;
-      padding: 2em;
-    }
-
-
-    .sponsors img {
-      max-width: calc(100% - 50px);
-      margin: 0 auto;
-      display: block;
-    }
-
-    .sponsors .logo {
-      display: -webkit-box;
-      display: -webkit-flex;
-      display: -ms-flexbox;
-      display: flex;
-      -webkit-box-align: center;
-      -webkit-align-items: center;
-      -ms-flex-align: center;
-      align-items: center;
-      height: 180px;
-    }
-
-    .sponsor {
-      list-style: none;
-      padding: 2em;
-    }
-
-    .sponsor p {
-      font-size: 1.2em;
-    }
-    </style>
-    <section id="sponsors">
-
-      <h1>We ❤️ our sponsors, and we hope you will, too.</h1>
-      <ul class="sponsors">
-        <li class="sponsor">
-          <div class="logo">
-            <a href="https://www.humblespark.com">
-              <img src="https://cloud.githubusercontent.com/assets/22400633/20069227/fae09f7e-a4d8-11e6-9404-3f1fa8566f6e.png" alt="Humble Spark Logo" />
-            </a>
-          </div>
-          <p>A front-end focused development consultancy, that specializes in javascript-heavy websites, web performance, a/b testing & analytics.</p>
-        </li>
-
-
-        <li class="sponsor">
-          <div class="logo"/>
-            <a href="https://aster.is">
-              <img src="https://cloud.githubusercontent.com/assets/22400633/20069225/f884bb3e-a4d8-11e6-9ddf-605db5873c0e.png" alt="Asteris Logo" />
-            </a>
-          </div>
-          <p>Software design and development services for next-generation infrastructure software for the modern datacenter.</p>
-        </li>
-
-        <li class="sponsor">
-          <div class="logo">
-            <a href="http://dayoneapp.com">
-              <img src="https://cloud.githubusercontent.com/assets/22400633/20069232/00dc01de-a4d9-11e6-8a84-79e6c4f8631a.png" alt="Day One Logo" />
-            </a>
-          </div>
-          <p>Day One is a journaling app for the iPhone, iPad, and Mac with an elegant interface makes journaling your life a simple pleasure.</p>
-        </li>
-
-
-        <li class="sponsor">
-          <div class="logo">
-            <a href="https://www.dailydrip.com">
-              <img src="https://cloud.githubusercontent.com/assets/22400633/20069240/0951aba2-a4d9-11e6-9c19-206b6c9f615d.png" alt="Humble Spark Logo" />
-            </a>
-          </div>
-          <p>DailyDrip gives you daily content that’s tailored to what you want to learn. It only takes about 5 minutes a day and you retain more than if you were binge learning.</p>
-        </li>
-      </ul>
-
-    </section>
-
-
-
-    <div class="post p2 p-responsive wrap" role="main">
-      <div class="measure">
-        {{ content }}
-      </div>
-    </div>
-  </div>
-
-  {% include footer.html %}
+  <main id="app"></main>
+  <script src="/js/main.js" charset="utf-8"></script>
 </body>
 </html>
